hotfix: change Turmas to ClassModel
