# app/Models/ClassModel.php
@@ -4,7 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 
-class Turma extends Model
+class ClassModel extends Model
 {
     protected $fillable = [
         'name',
